написана функция лексера, но появилась ошибка  unknown type name ErrorStruct. надо будет пофиксить

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "errorhandler.h": "c",
-        "random": "cpp"
+        "random": "cpp",
+        "tokens.h": "c"
     }
 }
