сделаны функции инициализации хедера объектов и самого объекта, а так же функции доабвления, удаления и очистки объекта. все работает корректно

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "errorhandler.h": "c",
         "random": "cpp",
-        "tokens.h": "c"
+        "tokens.h": "c",
+        "objects.h": "c"
     }
 }
